@@ -16,7 +16,6 @@ import javax.annotation.CheckReturnValue;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -366,7 +365,7 @@ public class VoiceText {
                     return;
                 }
                 System.setProperty("file.encoding", "UTF-8");
-                Files.write(Paths.get("./Temp/" + hash + ".mp3"), body.bytes());
+                Files.write(LibFiles.VDirectory.VOICETEXT_CACHES.resolve(Path.of(hash)), body.bytes());
             } catch (IOException e) {
                 e.printStackTrace();
                 return;
@@ -376,7 +375,7 @@ public class VoiceText {
                 .queue(null, Throwable::printStackTrace);
             filteringQueue(speakFromType, message);
             TrackInfo info = new TrackInfo(speakFromType, message);
-            PlayerManager.getINSTANCE().loadAndPlay(info, "./Temp/" + hash + ".mp3");
+            PlayerManager.getINSTANCE().loadAndPlay(info, LibFiles.VDirectory.VOICETEXT_CACHES.resolve(Path.of(hash)).toString());
         } catch (JSONException e) {
             e.printStackTrace();
         }
